syntax = "proto3";

package account.v1;

option go_package = "./account";
service AccountService{
  rpc GetContact(GetContactRequest) returns (GetContactResponse);
  rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse);
}

message GetContactRequest {
  string id = 1;
}

message GetContactResponse {
  string id = 1;
  string title = 2;
  string first_name = 3;
  string middle_initial = 4;
  string last_name = 5;
  string email_address = 6;
  string direct_phone = 7;
}

message GetOrdersRequest {
  int32 customer_id = 1;
  string company_id = 2;
}

message PutOrderRequest {
  message Items {
    int32 inv_mast_uid = 1;
    int32 price = 2;
  }
  int32 customer_id = 1;
  string company_id = 2;

}



message GetOrdersResponse {
  message Order {
    string order_no = 1;
    string order_date = 2;
    string completed = 3;
    string approved = 4;
    string delete_flag = 5;
  }
  repeated Order orders = 1;
}
